Spacing bugfix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-  top: $navbar-height;
+  margin-top: $navbar-height;
 }
 
 ul {
